--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    
     <title>Trello-Board</title>
   </head>
 
-  <body></body>
+  <body>
+    <!-- <div class="card-container">
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-name">TODO</div>
+           <div class="card-more"><img class='dots-menu' src="./css/pic/dots.png" alt=""></div>
+        </div>
+        <div class="card-body">Новая задача</div>
+        <div class="card-add">+ Add another card</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-name">IN PROGRESS</div>
+          <div class="card-more"><img class='dots-menu' src="./css/pic/dots.png" alt=""></div>
+        </div>
+        <div class="card-body">Новая задача</div>
+        <div class="car-add">+ Add another card</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-name">DONE</div>
+           <div class="card-more"><img class='dots-menu' src="./css/pic/dots.png" alt=""></div>
+        </div>
+        <div class="card-body">Новая задача</div>
+        <div class="car-add">+ Add another card</div>
+      </div>
+    </div> -->
+
+  </body>
 </html>
